# internet-capital-bank

./: .env.example  .gitignore  ARS-WORKFLOW.md  COLLABORATION_PLAN.md  COLLABORATION_REPLY_DRAFT.md  HEXSTRIKE_INTEGRATION_RECOMMENDATION.md  NEW_DESCRIPTION.md  QUICK_START_LOCAL.md  README.md  REGISTRATION_GUIDE.md  SECURITY_AGENTS_DEPLOYMENT_GUIDE.md  SECURITY_FIXES_APPLIED.md  SECURITY_FIXES_COMPLETE.md  SECURITY_FIX_COMPLETION.md  WHITEPAPER.md  package-lock.json  post-collaboration-reply.py  start-local.cmd  start-local.sh
.kiro/llms/: GASP-llms.txt
.openclaw/skills/: agent-consciousness.md  aml-cft-compliance.md  blockchain-security.md  blueteam-defense.md  hexstrike-redteam.md
backend/: .env.example  API_DOCUMENTATION.md  package.json
backend/src/: app.ts  index.ts
documentation/: AGENTIC_RESERVE_SYSTEM.md  BUILD_SUCCESS.md  IMPLEMENTATION_STATUS.md  PHASE_4_COMPLETION.md  SECURITY_FIX_COMPLETION.md  SECURITY_ISSUES_ROADMAP.md  WHITEPAPER.md
documentation/development/: AGENT_SWARM_ARCHITECTURE.md  AGENT_SWARM_IMPLEMENTATION.md  COLOSSEUM_INTEGRATION.md  COLOSSEUM_SETUP_COMPLETE.md  COMPLETE_PROJECT_SUMMARY.md  MANUAL_COMMANDS.md  (+11 more)
programs/ars-core/: Cargo.toml
programs/ars-core/src/: errors.rs  lib.rs  state.rs
programs/ars-core/src/instructions/: circuit_breaker.rs  create_proposal.rs  execute_proposal.rs  update_ili.rs  vote_on_proposal.rs
programs/ars-core/src/math/: fixed_point.rs  mod.rs
programs/ars-core/src/utils/: mod.rs  reentrancy.rs  signature.rs
scripts/: register-agent.sh  register-ars-colosseum.sh
supabase/: init.sql
(+126 files in other folders)
