[package]
name = "ars-core"
version = "0.1.0"
description = "ARS Core Program - Main protocol logic for ILI calculation and futarchy governance"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ars_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
proptest = "1.4"
